overflow bug fix #2

--- a/styles.css
+++ b/styles.css
@@ -26,10 +26,12 @@
 }
 html,
 body {
+  overflow-x: hidden;
 }
 
 .wrapper {
   overflow-x: hidden;
+  position: relative;
 }
 
 h1 {
